# Inventory-Manager

./: .gitignore  README.md  admin.cpp  database.cpp  databasesqlite3.db  interface.cpp  main.cpp  user.cpp
config/: CMakeLists-Arch-Linux.txt  CMakeLists.txt
config-arch/: CMakeLists.txt
headers/: asprintf.h  aux_functions.h  database.h  global_variables.h  init.h  interface.h  product.h  user.h
source/: admin.cpp  database.cpp  interface.cpp  product.cpp  productCategory.cpp  user.cpp
source/headers/: admin.h  database.h  global_variables.h  interface.h  product.h  productCategory.h  user.h
sqlite3/: shell.c  sqlite3.h
